# avBadge_2024

./: .gitmodules  README.md  bezel.stl
AV Badge Development Tutorial/: Readme.md
FAQs/: FAQ.md  building_wingletOS.md
Tutorials-FAQ/: FAQ.md
Tutorials-FAQ/AV Badge Development Tutorial/: Making Maps.md  Readme.md
hardware/: DCAV32_WINGLET_V1P_OSR.PrjPcb  hardware-readme.md
hardware/Libraries/: DCAV32_WINGLET_PCBLIB.PcbLib  DCAV32_WINGLET_SCHLIB.SchLib
hardware/Schematics/: SCH_WINGLET_ADSB.SchDoc  SCH_WINGLET_BMU.SchDoc  SCH_WINGLET_DEBUG.SchDoc  SCH_WINGLET_DISP.SchDoc  (+6 more)
qt_components/: CMakeLists.txt  MainMenu.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
qt_components/AVQtWidgets/: clock.cpp  clock.h  clock.ui  compass.cpp  compass.h  compass.ui  files.qrc  flightboard.cpp  flightboard.h  getdata.cpp  getdata.h  oscope.cpp  oscope.h  qcircularkeyboard.cpp  qcircularkeyboard.h  qradialmenu.cpp  qradialmenu.h  qrotarymenu.cpp  qrotarymenu.h  qrotarymenuentry.cpp  qrotarymenuentry.h  radarscope.cpp  radarscope.h  radarscope.ui  simplemediaplayer.cpp  simplemediaplayer.h  simplemediaplayer.ui  splash.cpp  splash.h  splash.ui
qt_components/AVQtWidgets/RotaryMenuEntries/: qclockmenuentry.cpp  qclockmenuentry.h  qcompassmenuentry.cpp  qcompassmenuentry.h  qflightboardmenuentry.cpp  qflightboardmenuentry.h  qmediaplayermenuentry.cpp  qmediaplayermenuentry.h  qoscopemenuentry.cpp  qoscopemenuentry.h  qradarscopemenuentry.cpp  qradarscopemenuentry.h  qsplashmenuentry.cpp  qsplashmenuentry.h  qtestmenuentry.cpp  qtestmenuentry.h
(+281 files in other folders)
